# atlas

./: .gitignore  CMakeLists.txt  Makefile
atlas/: atlas.cpp  event.cpp  mouse.cpp  utils.cpp  window.cpp
atlas/application/: application.cpp
atlas/console/: console.cpp
atlas/core/: core_rendering.cpp  data.cpp  fallback.cpp  scene.cpp  shader.cpp
atlas/core/post_processing/blur/: blur.frag
atlas/core/post_processing/none/: none.frag  none.vert
atlas/core/shaders/normal/: normal.frag  normal.vert
atlas/elements/: controllers.cpp
atlas/graphics/: camera.cpp  shape.cpp  texture.cpp
atlas_test/: main.cpp
include/: test.hpp
include/atlas/: application.h  camera.hpp  component.hpp  data.hpp  elements.hpp  event.hpp  graphics.h  mouse.hpp  scene.hpp  shape.h  shape.hpp  texture.hpp  unit.hpp  units.h  window.hpp
include/atlas/core/: console.hpp  core_rendering.h  exec_error.hpp  shader.hpp
include/atlas/utilities/: style.hpp  utils.hpp
shaders/cube/: cube.frag  cube.vert  cube_text.frag
shaders/triangle/: triangle.vert
test/: main.cpp
